# Linear

./: .gitignore  CMakeLists.txt  README.md
includes/: Linear.hpp  block.hpp
includes/linear_bits/: block.hpp  block_impl.hpp  matrix.hpp  matrix_impl.hpp  operator_ostream.hpp  typedef_elem.hpp
src/: Linear_main.cpp
tests/: CMakeLists.txt
tests/src/: block_test.cpp  matrix_test.cpp  test_suite.cpp
